<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.android.trustingsocial.test.util.binding.BindingConverter"/>
        <variable
                name="viewmodel"
                type="com.android.trustingsocial.test.viewmodal.MainViewModal"/>
    </data>

    <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.MainActivity"
                android:padding="@dimen/loan_input_padding_content">

            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleLarge"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="gone"/>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guiCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4"/>

            <TextView
                    android:id="@+id/tvHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/loan_input_bank_header"
                    style="@style/TextAppearance.AppCompat.Large"/>


            <TextView
                    android:id="@+id/tvBankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvHeader"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@{viewmodel.bankInformation.bank.name}"
                    style="@style/TextAppearance.AppCompat.Medium"/>

            <ImageView
                    android:id="@+id/imgBankLogo"
                    android:layout_width="@dimen/loan_input_logo_size"
                    android:layout_height="@dimen/loan_input_logo_size"
                    app:layout_constraintTop_toBottomOf="@id/tvBankName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@{viewmodel.bankInformation.bank.logoUrl}"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:id="@+id/txtLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/imgBankLogo"
                    app:layout_constraintRight_toLeftOf="@id/guiCenter"
                    android:text="@string/loan_input_loan_limit"
                    android:layout_marginRight="@dimen/loan_input_banking_info_margin"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <TextView
                    android:id="@+id/txtLimitTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtLimit"
                    app:layout_constraintRight_toRightOf="@id/txtLimit"
                    android:text="@string/loan_input_loan_limit_time"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <TextView
                    android:id="@+id/txtLimitRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtLimitTime"
                    app:layout_constraintRight_toRightOf="@id/txtLimitTime"
                    android:text="@string/loan_input_loan_limit_rate"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <TextView
                    android:id="@+id/txtLimitValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtLimit"
                    app:layout_constraintLeft_toRightOf="@id/guiCenter"
                    android:layout_marginLeft="@dimen/loan_input_banking_info_margin"
                    android:text="@{@string/loan_input_loan_limit_format(BindingConverter.convertToCurrency(viewmodel.bankInformation.minAmount), BindingConverter.convertToCurrency(viewmodel.bankInformation.maxAmount))}"
                    style="@style/LoanInputBankInfoTextValue"/>

            <TextView
                    android:id="@+id/txtLimitTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtLimitTime"
                    app:layout_constraintLeft_toLeftOf="@id/txtLimitValue"
                    android:text="@{@string/loan_input_loan_limit_time_format(viewmodel.bankInformation.minTenor, viewmodel.bankInformation.maxTenor)}"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTextValue"/>

            <TextView
                    android:id="@+id/txtLimitRateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtLimitRate"
                    app:layout_constraintLeft_toLeftOf="@id/txtLimitTimeValue"
                    android:text="@{@string/loan_input_loan_limit_rate_format(viewmodel.bankInformation.rate)}"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTextValue"/>

            <TextView
                    android:id="@+id/tvLoanHeder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtLimitRateValue"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/loan_input_header"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginTop="@dimen/loan_input_banking_loan_group_margin_top"/>

            <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvLoanHeder"
                    app:layout_constraintRight_toLeftOf="@id/guiCenter"
                    android:text="@string/loan_input_phone"
                    android:layout_marginRight="@dimen/loan_input_banking_info_margin"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <com.android.trustingsocial.test.ui.customview.LoanNumberEditText
                    android:id="@+id/eTxtPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/guiCenter"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtPhone"
                    android:text="@={viewmodel.phoneNumber}"
                    android:layout_marginLeft="@dimen/loan_input_banking_info_margin"
                    app:numberType="phone"/>

            <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtPhone"
                    app:layout_constraintRight_toRightOf="@id/txtPhone"
                    android:text="@string/loan_input_name"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <com.android.trustingsocial.test.ui.customview.LoanNumberEditText
                    android:id="@+id/eTxtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.name}"
                    app:layout_constraintLeft_toLeftOf="@id/eTxtPhone"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtName"
                    app:errorText="@string/loan_edit_text_default_name_error"/>

            <TextView
                    android:id="@+id/txtNationalId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtName"
                    app:layout_constraintRight_toRightOf="@id/txtName"
                    android:text="@string/loan_input_id"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <com.android.trustingsocial.test.ui.customview.LoanNumberEditText
                    android:id="@+id/eTxtNationalId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/eTxtName"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtNationalId"
                    android:text="@={viewmodel.nationalId}"
                    app:numberType="national_id"/>

            <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtNationalId"
                    app:layout_constraintRight_toRightOf="@id/txtNationalId"
                    android:text="@string/loan_input_address"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

            <Spinner
                    android:id="@+id/spnAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/eTxtNationalId"
                    app:layout_constraintBottom_toBottomOf="@id/txtAddress"
                    style="@style/LoanInputBankInfoTitleText"
                    android:entries="@{viewmodel.provinces.provinces}"
                    android:selectedItemPosition="@={viewmodel.provinceSelectedPosition}"/>

            <TextView
                    android:id="@+id/txtIncome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/spnAddress"
                    app:layout_constraintRight_toRightOf="@id/txtNationalId"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/loan_input_income"
                    style="@style/LoanInputBankInfoTitleText"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"/>

            <Spinner
                    android:id="@+id/spnIncome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/eTxtNationalId"
                    app:layout_constraintTop_toTopOf="@id/txtIncome"
                    app:layout_constraintBottom_toBottomOf="@id/txtIncome"
                    android:entries="@{viewmodel.incomeBinding}"
                    android:selectedItemPosition="@={viewmodel.incomeSelectedPosition}">
            </Spinner>

            <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/txtIncome"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/loan_input_submit"
                    android:layout_marginTop="@dimen/loan_input_banking_info_margin_top"
                    style="@style/LoanInputBankInfoTitleText"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</layout>